gemfire/ingressforminikube/gmc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gmc-ingress
  namespace: gemfire-operator
spec:
  ingressClassName: nginx
  rules:
    - host: gmc.fbi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gemfire-management-console
                port:
                  number: 8080
