gemfire/ingressforminikube/restapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ln-rest-ingress
  namespace: uk
spec:
  ingressClassName: nginx
  rules:
    - host: lnrestapi.fbi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ln-server
                port:
                  number: 7070
